# aioapi

./: LICENSE  README.md  pyproject.toml  server.py
aioapi/: __init__.py  application.py  exceptions.py  helpers.py  http_parser.py  request.py  response.py  url_dispatch.py
aioapi/middlewares/: __init__.py  logger.py
aioapi/routing/: __init__.py  url_routing.py
