[tool.poetry]
name = "aioapi"
version = "0.1.0"
description = ""
authors = ["Vladimir Kolev <vladimir.r.kolev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
httptools = "^0.6.0"
yarl = "^1.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest-asyncio = "^0.21.1"
flake8 = "^6.1.0"
isort = "^5.12.0"


[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
